root: add local CLI package to deps so they can be run with yarn
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/package.json
+++ b/package.json
@@ -57,14 +57,19 @@
     "@microsoft/tsdoc": "^0.14.1"
   },
   "devDependencies": {
+    "@backstage/cli": "workspace:*",
+    "@backstage/codemods": "workspace:*",
+    "@backstage/create-app": "workspace:*",
     "@changesets/cli": "^2.14.0",
     "@octokit/rest": "^19.0.3",
     "@spotify/prettier-config": "^14.0.0",
+    "@techdocs/cli": "workspace:*",
     "@types/node": "^16.11.26",
     "@types/webpack": "^5.28.0",
     "command-exists": "^1.2.9",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.0",
+    "e2e-test": "workspace:*",
     "eslint-plugin-notice": "^0.9.10",
     "fs-extra": "10.1.0",
     "husky": "^8.0.0",
