--- a/.github/workflows/verify_microsite.yml
+++ b/.github/workflows/verify_microsite.yml
@@ -29,7 +29,7 @@ jobs:
         # Skip caching of microsite dependencies, it keeps the global cache size
         # smaller, which make Windows builds a lot faster for the rest of the project.
       - name: yarn install
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
         working-directory: microsite
 
       - name: prettier
