yarn: install workspace tools plugin
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,11 @@
+httpTimeout: 300000
 
 nodeLinker: node-modules
-httpTimeout: 300000
+
 npmRegistryServer: "https://registry.npmjs.org/"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+
 yarnPath: .yarn/releases/yarn-3.2.2.cjs
