tweak Yarn 3 gitignore entires
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -61,10 +61,14 @@ typings/
 # Optional npm cache directory
 .npm
 
-# Yarn 3 with modules linker
+# Yarn 3 files
+.pnp.*
 .yarn/*
-!.yarn/releases
+!.yarn/patches
 !.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Node version directives
 .nvmrc
