--- a/plugins/catalog-node/package.json
+++ b/plugins/catalog-node/package.json
@@ -26,13 +26,15 @@
   },
   "dependencies": {
     "@backstage/backend-plugin-api": "^0.1.2-next.0",
+    "@backstage/catalog-client": "^1.0.5-next.0",
     "@backstage/catalog-model": "^1.1.0",
     "@backstage/errors": "1.1.0",
     "@backstage/types": "^1.0.0"
   },
   "devDependencies": {
     "@backstage/backend-common": "^0.15.1-next.1",
-    "@backstage/cli": "^0.19.0-next.1"
+    "@backstage/cli": "^0.19.0-next.1",
+    "@backstage/backend-test-utils": "^0.1.28-next.1"
   },
   "files": [
     "dist",
